// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders snapshot 1`] = `
<div
  className="sc-bdnxRM fBLZFc"
>
  <span
    style={
      Object {
        "width": "40%",
      }
    }
  >
    <a
      href="https://reactjs.org/"
    >
      React
    </a>
  </span>
  <span
    className="sc-gtsrHT iBufAq"
    width="30%"
  >
    Jordan Walke
  </span>
  <span
    className="sc-gtsrHT iBtGzw"
    width="10%"
  >
    3
  </span>
  <span
    className="sc-gtsrHT iBtGzw"
    width="10%"
  >
    4
  </span>
  <span
    className="sc-gtsrHT iBtGzw"
    width="10%"
  >
    <button
      className="button button_small"
      onClick={[Function]}
      type="button"
    >
      <svg
        height="18px"
        width="18px"
      >
        check.svg
      </svg>
    </button>
  </span>
</div>
`;

exports[`List renders snapshot for List component 1`] = `
<div>
  <div
    style={
      Object {
        "display": "flex",
      }
    }
  >
    <span
      onClick={[Function]}
      style={
        Object {
          "width": "40%",
        }
      }
      type="button"
    >
      <button
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        Title
      </button>
    </span>
    <span
      onClick={[Function]}
      style={
        Object {
          "width": "30%",
        }
      }
      type="button"
    >
      <button
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        Author
      </button>
    </span>
    <span
      onClick={[Function]}
      style={
        Object {
          "width": "10%",
        }
      }
      type="button"
    >
      <button
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        Comments
      </button>
    </span>
    <span
      onClick={[Function]}
      style={
        Object {
          "width": "10%",
        }
      }
      type="button"
    >
      <button
        style={
          Object {
            "backgroundColor": "white",
          }
        }
      >
        Points
      </button>
    </span>
    <span
      style={
        Object {
          "width": "10%",
        }
      }
    >
      Actions
    </span>
  </div>
  <div
    className="sc-bdnxRM fBLZFc"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="https://reactjs.org/"
      >
        React
      </a>
    </span>
    <span
      className="sc-gtsrHT iBufAq"
      width="30%"
    >
      Jordan Walke
    </span>
    <span
      className="sc-gtsrHT iBtGzw"
      width="10%"
    >
      3
    </span>
    <span
      className="sc-gtsrHT iBtGzw"
      width="10%"
    >
      4
    </span>
    <span
      className="sc-gtsrHT iBtGzw"
      width="10%"
    >
      <button
        className="button button_small"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="18px"
          width="18px"
        >
          check.svg
        </svg>
      </button>
    </span>
  </div>
  <div
    className="sc-bdnxRM fBLZFc"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a
        href="https://redux.js.org/"
      >
        Redux
      </a>
    </span>
    <span
      className="sc-gtsrHT iBufAq"
      width="30%"
    >
      Dan Abramov, Andrew Clark
    </span>
    <span
      className="sc-gtsrHT iBtGzw"
      width="10%"
    >
      2
    </span>
    <span
      className="sc-gtsrHT iBtGzw"
      width="10%"
    >
      5
    </span>
    <span
      className="sc-gtsrHT iBtGzw"
      width="10%"
    >
      <button
        className="button button_small"
        onClick={[Function]}
        type="button"
      >
        <svg
          height="18px"
          width="18px"
        >
          check.svg
        </svg>
      </button>
    </span>
  </div>
</div>
`;
